--- a/.github/workflows/mozorg-site-scanning.yaml
+++ b/.github/workflows/mozorg-site-scanning.yaml
@@ -57,64 +57,64 @@ jobs:
           path: page_cache
           retention-days: 5
 
-  # run_on_us_origin:
-  #   strategy:
-  #     matrix:
-  #       batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
-  #   runs-on: ubuntu-latest
-  #   name: Check US origin server - batch ${{ matrix.batch }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.11"
-  #     - name: Install requirements
-  #       run: pip install -r requirements.txt
-  #     - name: Run checker
-  #       run: >
-  #         python bin/scan_site.py
-  #         --sitemap-url="https://${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}/sitemap.xml"
-  #         --maintain-hostname
-  #         --batch="${{ matrix.batch }}"
-  #     - name: Upload scan output files
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: scan-results-${{ matrix.batch }}-US-origin
-  #         path: output
-  #         retention-days: 15
+  run_on_us_origin:
+    strategy:
+      matrix:
+        batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
+    runs-on: ubuntu-latest
+    name: Check US origin server - batch ${{ matrix.batch }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install requirements
+        run: pip install -r requirements.txt
+      - name: Run checker
+        run: >
+          python bin/scan_site.py
+          --sitemap-url="https://${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}/sitemap.xml"
+          --maintain-hostname
+          --batch="${{ matrix.batch }}"
+      - name: Upload scan output files
+        uses: actions/upload-artifact@v4
+        with:
+          name: scan-results-${{ matrix.batch }}-US-origin
+          path: output
+          retention-days: 15
 
-  # run_on_eu_origin:
-  #   strategy:
-  #     matrix:
-  #       batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
-  #   runs-on: ubuntu-latest
-  #   name: Check EU origin server - batch ${{ matrix.batch }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.11"
-  #     - name: Install requirements
-  #       run: pip install -r requirements.txt
-  #     - name: Run checker
-  #       run: >
-  #         python bin/scan_site.py
-  #         --sitemap-url="https://${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}/sitemap.xml"
-  #         --maintain-hostname
-  #         --batch="${{ matrix.batch }}"
-  #     - name: Upload scan output files
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: scan-results-${{ matrix.batch }}-EU-origin
-  #         path: output
-  #         retention-days: 15
+  run_on_eu_origin:
+    strategy:
+      matrix:
+        batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
+    runs-on: ubuntu-latest
+    name: Check EU origin server - batch ${{ matrix.batch }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install requirements
+        run: pip install -r requirements.txt
+      - name: Run checker
+        run: >
+          python bin/scan_site.py
+          --sitemap-url="https://${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}/sitemap.xml"
+          --maintain-hostname
+          --batch="${{ matrix.batch }}"
+      - name: Upload scan output files
+        uses: actions/upload-artifact@v4
+        with:
+          name: scan-results-${{ matrix.batch }}-EU-origin
+          path: output
+          retention-days: 15
 
   alert_if_report_files_exist:
     runs-on: ubuntu-latest
     needs:
       - run_on_cdn
-      # - run_on_us_origin
-      # - run_on_eu_origin
+      - run_on_us_origin
+      - run_on_eu_origin
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
